--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<!-- ICS2O-Unit1-05-HTML-MDL -->
+<html lang="en-ca">
+<head>
+  <meta charset="utf-8" />
+  <meta name="description" content="My first MDL webpage" />
+  <meta name="keywords" content="mths, ics2o" />
+  <meta name="author" content="David.E" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.red-indigo.min.css" />
+  <link rel="stylesheet" href="./css/style.css" />
     <title>Title</title>
   </head>
   <body>
